--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "swipe": "^1.7.7",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
